syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/data/video";
option java_package = "ru.yandex.alice.protos.data.video";
option java_outer_classname = "CardDetailProto";

import "mapreduce/yt/interface/protos/extension.proto";
import "google/protobuf/struct.proto";
import "alice/protos/data/video/content_details.proto";
import "alice/protos/data/video/video.proto";

/**
  Represents availability of current film for current user
 */
message TAvailabilityInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    bool Ad = 1 [json_name = "AVOD", (NYT.column_name) = "AVOD"];
    bool Rent = 2 [json_name = "TVOD", (NYT.column_name) = "TVOD"];
    bool Purchase = 3 [json_name = "EST", (NYT.column_name) = "EST"];
    bool Subscription = 4 [json_name = "SVOD", (NYT.column_name) = "SVOD"];
}

message TRatingInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    int32 BestRating = 1  [json_name = "best_rating", (NYT.column_name) = "best_rating"];
    string DisplayName = 2  [json_name = "name", (NYT.column_name) = "name"];
    int32 OriginalBestRating = 3  [json_name = "original_best_rating", (NYT.column_name) = "original_best_rating"];
    float OriginalRatingValue = 4  [json_name = "original_rating_value", (NYT.column_name) = "original_rating_value"];
    int32 RatingCount = 5  [json_name = "rating_count", (NYT.column_name) = "rating_count"];
    float RatingValue = 6  [json_name = "rating_value", (NYT.column_name) = "rating_value"];
    string Type = 7  [json_name = "type", (NYT.column_name) = "type"];
    string Url = 8  [json_name = "url", (NYT.column_name) = "url"];
}

message TTrailerInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TThumbnailInfo {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        int32 OriginalHeight = 1 [json_name = "thmb_h_orig", (NYT.column_name) = "thmb_h_orig"];
        int32 OriginalWidth = 2 [json_name = "thmb_w_orig", (NYT.column_name) = "thmb_w_orig"];
        string Url = 3 [json_name = "thmb_href", (NYT.column_name) = "thmb_href"];
    }

    string Date = 1 [json_name = "date", (NYT.column_name) = "date"];
    int32 Duration = 2 [json_name = "duration", (NYT.column_name) = "duration"];
    int32 External = 3 [json_name = "external", (NYT.column_name) = "external"];
    string StreamUrl = 4 [json_name = "stream_url", (NYT.column_name) = "stream_url"];
    TThumbnailInfo ThumbnailInfo = 5 [json_name = "thumbnail", (NYT.column_name) = "thumbnail"];
    string Url = 6 [json_name = "url", (NYT.column_name) = "url"];
    string VhUuid = 7 [json_name = "vh_uuid", (NYT.column_name) = "vh_uuid"];
}

message TTvCardDetailsRequest {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string ContentId = 1 [json_name = "content_id", (NYT.column_name) = "content_id"];
    string ContentType = 2 [json_name = "content_type", (NYT.column_name) = "content_type"];
    string ContentOntoId = 3 [json_name = "onto_id", (NYT.column_name) = "onto_id"];
}

message TTvCardDetailResponse {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string ContentId = 1 [json_name = "content_id", (NYT.column_name) = "content_id"];
    string ContentType = 2 [json_name = "content_type", (NYT.column_name) = "content_type"];
    string Title = 3 [json_name = "title", (NYT.column_name) = "title"];
    string Description = 4 [json_name = "description", (NYT.column_name) = "description"];
    string OntoDatabaseCategoryValue = 5 [json_name = "onto_category", (NYT.column_name) = "onto_category"];
    string PlayerId = 6 [json_name = "player_id", (NYT.column_name) = "player_id"];
    string Actors = 7 [json_name = "actors", (NYT.column_name) = "actors"];
    string Countries = 8 [json_name = "countries", (NYT.column_name) = "countries"];
    string Cover = 9 [json_name = "cover", (NYT.column_name) = "cover"];
    string Directors = 10 [json_name = "directors", (NYT.column_name) = "directors"];
    string Genres = 11 [json_name = "genres", (NYT.column_name) = "genres"];
    string Thumbnail = 12 [json_name = "thumbnail", (NYT.column_name) = "thumbnail"];
    string Logo = 13 [json_name = "logo", (NYT.column_name) = "logo"];
    int32 Dislikes = 14 [json_name = "dislikes", (NYT.column_name) = "dislikes"];
    int32 Likes = 15 [json_name = "likes", (NYT.column_name) = "likes"];
    int32 DurationSeconds = 16 [json_name = "duration_s", (NYT.column_name) = "duration_s"];
    int32 ReleaseYear = 17 [json_name = "release_year", (NYT.column_name) = "release_year"];
    int32 RestrictionAge = 18 [json_name = "restriction_age", (NYT.column_name) = "restriction_age"];
    repeated string Licenses = 19 [json_name = "licenses", (NYT.column_name) = "licenses"];
    TAvailabilityInfo AvailabilityInfo = 20 [json_name = "owned", (NYT.column_name) = "owned"];
    repeated TRatingInfo RatingInfo = 21 [json_name = "ratings", (NYT.column_name) = "ratings"];
    TContentDetailsItem DeviceState = 22 [json_name = "device_state", (NYT.column_name) = "device_state"];
    TTrailerInfo TrailerInfo = 23 [json_name = "trailer", (NYT.column_name) = "trailer"];
    repeated TOttVideoItem.TCinema Cinemas = 24 [json_name = "cinemas", (NYT.column_name) = "cinemas"];
    bool WillWatch = 25 [json_name = "will_watch", (NYT.column_name) = "will_watch"];
};

enum ETvPromoType {
    post = 0;
}

/**
 * Tell client which player should be used for playing corresponding content
 */
enum ETvPlayerType {
    web = 0;
    vh = 1;
    ott = 2;
    kinopoisk = 3;
}

enum EMonetizationModelType {
    AVOD = 0;
    SVOD = 1;
    TVOD = 2;
    EST = 3;
}

message TBasicSeriesInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    string Title = 2 [json_name = "title", (NYT.column_name) = "title"];
}

message TBasicSeasonInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    int32 SeasonNumber = 2 [json_name = "season_number", (NYT.column_name) = "season_number"];
}

message TTvThinCardDetailResponse {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string ContentId = 1 [json_name = "content_id", (NYT.column_name) = "content_id"];
    string ContentType = 2 [json_name = "content_type", (NYT.column_name) = "content_type"];
    string Title = 3 [json_name = "title", (NYT.column_name) = "title"];
    int32 ReleaseYear = 4 [json_name = "release_year", (NYT.column_name) = "release_year"];
    int64 ReleaseDate = 5 [json_name = "release_date", (NYT.column_name) = "release_date"];
    int32 EpisodeNumber = 6 [json_name = "episode_number", (NYT.column_name) = "episode_number"];
    int32 Duration = 7 [json_name = "duration", (NYT.column_name) = "duration"];
    int32 RestrictionAge = 8 [json_name = "restriction_age", (NYT.column_name) = "restriction_age"];
    ETvPromoType TvPromoType = 9 [json_name = "show_tv_promo", (NYT.column_name) = "show_tv_promo"];
    string Genres = 10 [json_name = "genres", (NYT.column_name) = "genres"];
    string Thumbnail = 11 [json_name = "thumbnail", (NYT.column_name) = "thumbnail"];
    ETvPlayerType PlayerType = 12 [json_name = "player_id", (NYT.column_name) = "player_id"];
    string Poster = 13 [json_name = "poster", (NYT.column_name) = "poster"];
    EMonetizationModelType MonetizationModelType = 14 [json_name = "monetization_model", (NYT.column_name) = "monetization_model"];
    repeated TSkippableFragment SkippableFragments = 15 [json_name = "skippableFragments", (NYT.column_name) = "skippableFragments"];
    TBasicSeriesInfo BasicSeriesInfo = 16 [json_name = "series", (NYT.column_name) = "series"];
    TBasicSeasonInfo BasicSeasonInfo = 17 [json_name = "season", (NYT.column_name) = "season"];
    google.protobuf.Struct OttParams = 18 [json_name = "ott_params", (NYT.column_name) = "ott_params"];
    google.protobuf.Struct AdConfig = 19 [json_name = "adConfig", (NYT.column_name) = "adConfig"];
    map<string, string> Thumbnails = 20 [json_name = "thumbnails", (NYT.column_name) = "thumbnails"];
    repeated string AvailableLicences = 21 [json_name = "ya_plus", (NYT.column_name) = "ya_plus"];
};
